added updated bibliography

--- a/bibliography/bibfiles/Mir2018Recovery.bib
+++ b/bibliography/bibfiles/Mir2018Recovery.bib
@@ -5,5 +5,6 @@
     year = "2018",
     keywords = "electronic identities, mobile eID",
     doi = "10.1145/3007120.3007158",
-    note = "Under Review"
+    note = "Under Review",
+    options = "hide=True"
 }
