Added automatic PDF link creation

--- a/static/files/bibs/Hoelzl2017IFIPFull.bib
+++ b/static/files/bibs/Hoelzl2017IFIPFull.bib
@@ -5,5 +5,6 @@
     address = "Ispra, Italy",
     abstract = "There is a broad range of existing electronic identity (eID) systems which provide methods to sign documents or authenticate to online services (e.g. governmental eIDs, FIDO). However, these solutions mainly focus on the validation of an identity to a web page. That is, they often miss proper techniques to use them as regular ID cards to digitally authenticate an eID holder to another physical person in the real world. We propose a mobile eID which provides such a functionality and enables extensibility for its use with numerous different public and private services (e.g. for loyalty programs, public transport tickets, student cards), while protecting the privacy of the eID holder. In this paper, we present a general architecture and efficient protocols for such a privacy-preserving mobile eID that allows identity validation in a similar fashion as regular ID cards and makes carrying around various physical cards unnecessary.",
     publisher = "Springer International Publishing",
-    year = "2017"
+    year = "2017",
+    month = "09"
 }
