--- a/static/files/bibs/Hoelzl2017IFIPShort.bib
+++ b/static/files/bibs/Hoelzl2017IFIPShort.bib
@@ -3,5 +3,6 @@
     title = "{An Extensible and Privacy-preserving Mobile eID System for Real-world Identification and Offline Verification}",
     booktitle = "{The Smart World Revolution - 12th International {IFIP} Summer School on Privacy and Identity Management (Pre-proceedings)}",
     abstract = "There is a broad range of existing electronic identity (eID) systems which provide methods to sign documents or authenticate to online services (e.g. governmental eIDs, FIDO). However, these solutions mainly focus on the validation of an identity to a backend infrastructure. That is, they lack in providing proper techniques to use them as regular ID cards to digitally authenticate an eID holder to another physical person in the real world. We envision a mobile eID which provides such a functionality and enables extensibility for its use with numerous different public and private services (e.g. for loyalty programs, public transport tickets, students cards), while protecting the privacy of the eID holder. In this paper, we present a general architecture for such a privacy-preserving mobile eID that allows identity validation in a similar fashion as regular ID cards and makes carrying around various physical cards unnecessary.",
-    year = "2017"
+    year = "2017",
+    month = "09"
 }
