--- a/static/files/bibs/Roland2015TRCardAntennas.bib
+++ b/static/files/bibs/Roland2015TRCardAntennas.bib
@@ -4,7 +4,7 @@
     howpublished = "Computing Research Repository (CoRR), arXiv:1507.06427 [cs.CR]",
     year = "2015",
     month = "June",
-    url = "http://arxiv.org/pdf/1507.06427",
+    url = "http://arxiv.org/abs/1507.06427",
     abstract = "This report summarizes the results of our evaluation of antennas of contactless and dual interface smartcards and our ideas for user-switchable NFC antennas. We show how to disassemble smartcards with contactless capabilities in order to obtain the bare chip module and the bare antenna wire. We examine the design of various smartcard antennas and present concepts to render the contactless interface unusable. Finally, we present ideas and practical experiments to make the contactless interface switchable by the end-user.",
     language = "english"
 }
