--- a/static/files/bibs/Hoelzl2018Revocation.bib
+++ b/static/files/bibs/Hoelzl2018Revocation.bib
@@ -3,6 +3,7 @@
     title = "{Bridging the Gap in Privacy-Preserving Revocation: Practical and Scalable Revocation for a Privacy-Aware Mobile eID}",
     publisher = "ACM",
     year = "2018",
+    month = "04",
     keywords = "electronic identities, mobile eID, Privacy, requirements",
     booktitle = "{Proceedings of SAC 2018: Symposium on Applied Computing}",
     address = "Pau, France",
